Initial webpack config

--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
   "bugs": {
     "url": "https://github.com/arkis/arkis.io/issues"
   },
-  "homepage": "https://github.com/arkis/arkis.io#readme"
+  "homepage": "https://github.com/arkis/arkis.io#readme",
+  "devDependencies": {
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
+    "webpack": "^1.14.0"
+  }
 }
