--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   },
   "homepage": "https://github.com/arkis/arkis.io#readme",
   "devDependencies": {
+    "css-loader": "^0.26.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
+    "node-sass": "^4.2.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   }
 }
