--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -37,6 +37,7 @@ rules:
   no-trailing-zero: 1
   no-transition-all: 1
   no-universal-selectors: 0
+  no-url-domains: 0
   no-url-protocols: 0
   no-vendor-prefixes: 0
   no-warn: 1
