--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/arkis/arkis.io#readme",
   "devDependencies": {
+    "autoprefixer": "^6.6.1",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.9.0",
     "node-sass": "^4.2.0",
+    "postcss-loader": "^1.2.2",
     "sass-lint": "^1.10.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
