--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
+    "extract-loader": "^0.1.0",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "node-sass": "^4.2.0",
     "postcss-loader": "^1.2.2",
     "sass-lint": "^1.10.2",
