--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
   "rules": {
     "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "import/no-webpack-loader-syntax": "off",
-    "global-require": "off"
+    "global-require": "off",
+    "no-param-reassign": "off"
   },
   "settings": {
     "import/resolver": "webpack"
