--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "ionicons": "^3.0.0"
   }
 }
