Ignore .c9 folder everywhere

--- a/.pug-lintrc.json
+++ b/.pug-lintrc.json
@@ -1,5 +1,9 @@
 {
   "extends": "clock",
   "disallowIdLiterals": null,
-  "disallowMultipleLineBreaks": null
+  "disallowMultipleLineBreaks": null,
+  "excludeFiles": [
+    "node_modules/**",
+    ".c9/**"
+  ]
 }
