Prefer pug ID literals before class literals

--- a/.pug-lintrc.json
+++ b/.pug-lintrc.json
@@ -2,6 +2,8 @@
   "extends": "clock",
   "disallowIdLiterals": null,
   "disallowMultipleLineBreaks": null,
+  "requireClassLiteralsBeforeIdLiterals": null,
+  "disallowClassLiteralsBeforeIdLiterals": true,
   "excludeFiles": [
     "node_modules/**",
     ".c9/**"
