--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "description": "Website for Arkis",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dashboard -- webpack-dev-server",
     "c9-serve": "webpack-dev-server --host $IP --port $PORT",
     "build": "webpack",
     "watch": "webpack --watch",
@@ -53,6 +53,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
+    "webpack-dashboard": "^0.3.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
