--- a/package.json
+++ b/package.json
@@ -23,41 +23,41 @@
   },
   "homepage": "https://github.com/arkis/arkis.io#readme",
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.26.4",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-import-resolver-webpack": "^0.8.4",
+    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-react": "^6.10.3",
     "extract-loader": "^0.1.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
-    "jsdoc": "^3.4.3",
+    "html-loader": "^0.4.5",
+    "jsdoc": "^3.5.5",
     "jsdoc-babel": "^0.3.0",
-    "node-sass": "^4.2.0",
-    "postcss-loader": "^1.2.2",
-    "pug": "^2.0.0-beta10",
-    "pug-html-loader": "^1.1.0",
-    "pug-lint": "^2.4.0",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^1.3.3",
+    "pug": "^2.0.3",
+    "pug-html-loader": "^1.1.5",
+    "pug-lint": "^2.5.0",
     "pug-lint-config-clock": "^2.0.0",
-    "sass-lint": "^1.10.2",
+    "sass-lint": "^1.12.1",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.9",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.5"
   },
   "dependencies": {
     "ionicons": "^3.0.0",
     "jump.js": "^1.0.2",
-    "promise-polyfill": "^6.0.2",
-    "whatwg-fetch": "^2.0.2"
+    "promise-polyfill": "^6.1.0",
+    "whatwg-fetch": "^2.0.4"
   }
 }
